infra/k8s/finder-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finder-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finder
  template:
    metadata:
      labels:
        app: finder
    spec:
      containers:
        - name: finder
          image: bwebster92/wh-finder
---
apiVersion: v1
kind: Service
metadata:
  name: finder-svc
spec:
  selector:
    app: finder
  ports:
    - name: http-server
      protocol: TCP
      port: 3000
      targetPort: 3000
