infra/k8s/gatherer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatherer-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatherer
  template:
    metadata:
      labels:
        app: gatherer
    spec:
      containers:
        - name: gatherer
          image: bwebster92/wh-gatherer
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: gatherer-svc
spec:
  selector:
    app: gatherer
  ports:
    - name: gatherer
      protocol: TCP
      port: 3000
      targetPort: 3000
